:bug: fixing overflow on body

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@ body {
 	background-color: var(--backgroundColor);
 	position: relative;
 	user-select: none;
+	overflow: hidden;
 }
 
 * {
